--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Generate Snake
 
 on:
-  schedule: # roda a cada 12 horas
-    - cron: "0 */12 * * *"
-  workflow_dispatch: # permite rodar manualmente
+  schedule:
+    - cron: "0 */12 * * *" # roda a cada 12 horas
+  workflow_dispatch:
 
 jobs:
   build:
@@ -12,17 +12,16 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Generate Snake SVG
-        uses: Platane/snk@master
-        id: snake-gif
+        uses: Platane/snk@v3
         with:
           github_user_name: beeinblue
-          outputs: dist/github-contribution-grid-snake.svg
+          outputs: dist/snake.svg
 
       - name: Push Snake to output branch
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
